--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,15 @@ documentation = "https://github.com/narven/trex#readme"
 keywords = ["pytest", "testing", "test-discovery", "rust"]
 categories = ["development-tools::testing"]
 readme = "README.md"
-rust-version = "1.70"
+rust-version = "1.85.0"
 
 [dependencies]
 clap = { version = "4", features = ["derive"] }
 walkdir = "2"
 regex = "1"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+
+[dev-dependencies]
+tempfile = "3"
 serde_json = "1"
