Updated pipeline for releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,8 @@ jobs:
       - name: Run tests
         run: cargo test
 
+      - name: Build release
+        run: cargo build --release
+
       - name: Clippy
         run: cargo clippy -- -D warnings
